// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Content Bucket 2 Slice Slice matches snapshot at \`lg\` breakpoint 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-146arns"
    >
      <div
        class="css-1jneg5s"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-128qn49"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-16kr8bf"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Rugby Union
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-166fjww"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-1g5cjdw"
      >
        <div
          class="css-15rxmng"
          data-testid="article-container"
        >
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_01.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                  </span>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_02.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    ‘American owners pose threat to English pyramid’
                  </span>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_03.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                  </span>
                </span>
              </a>
            </div>
          </div>
          <hr
            aria-hidden="true"
            class="css-13rcg9f"
            data-testid="divider"
          />
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-1kwj960"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_04.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    Blow for rebel clubs as court says Uefa can block Super League
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Render Content Bucket 2 Slice Slice matches snapshot at \`xs\` breakpoint 1`] = `
<DocumentFragment>
  <div
    class="css-8atxkm"
  >
    <div
      class="css-146arns"
    >
      <div
        class="css-1jneg5s"
      >
        <div
          class="css-lihpnt"
        >
          <div
            class="css-128qn49"
          >
            <div
              class="css-86cix"
            >
              <div
                class="css-1aiajnh"
              >
                <section
                  class="css-16kr8bf"
                >
                  <h3
                    class="nk-headline-heading css-i2jo9u"
                  >
                    Rugby Union
                  </h3>
                </section>
              </div>
            </div>
            <a
              class="css-166fjww"
              data-testid="buttonLink"
              href="https://www.thetimes.co.uk/"
              role="link"
            >
              <svg
                aria-hidden="true"
                class="css-3rbz36"
                fill="currentcolor"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
                <path
                  d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                  fill="currentcolor"
                />
              </svg>
            </a>
          </div>
        </div>
      </div>
      <div
        class="css-1g5cjdw"
      >
        <div
          class="css-15rxmng"
          data-testid="article-container"
        >
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-uxw9nr"
            >
              <picture
                class="css-zp0elg"
              >
                <div
                  class="css-5pczz7"
                />
                <img
                  alt="This is ALT Text"
                  class="css-1qgqq71"
                  src="/assets/small_01.jpg"
                />
              </picture>
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    European cup winner Mihajlovic dies aged 53 after battle with leukaemia
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-exb5cr"
                data-testid="divider"
              />
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    ‘American owners pose threat to English pyramid’
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-exb5cr"
                data-testid="divider"
              />
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    £60m Brazilian prodigy Endrick snubs Chelsea to join Real Madrid
                  </span>
                </span>
              </a>
            </div>
          </div>
          <div
            class="css-1nw1nne"
          >
            <div
              class="css-tj8oo8"
            >
              <hr
                aria-hidden="true"
                class="css-exb5cr"
                data-testid="divider"
              />
            </div>
            <div
              class="css-diffbd"
            >
              <a
                class="css-1ajoxx4"
                href="/article/harry-and-meghan-s-new-project-to-make-boys-less-toxic-nk5n3h70m"
                role="link"
              >
                <span
                  class="css-17x5lw"
                >
                  <span
                    class="css-k2d5qk"
                  >
                    Blow for rebel clubs as court says Uefa can block Super League
                  </span>
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
